[package]
name = "bw-img"
version = "0.1.0"
edition = "2021"

[features]
default = ["compress", "img"]
compress = ["flate2"]
img = ["image"]

[dependencies]
thiserror = "*"
flate2 = { version = "*", default-features = false, features = ["zlib-ng"], optional = true }
image = { version = "*", optional = true }
